--- a/backend/templates/inregistrare.html
+++ b/backend/templates/inregistrare.html
@@ -44,8 +44,12 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <!--Favicon code end-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <link
       rel="stylesheet"
@@ -125,6 +129,7 @@
 
                         <button
                           type="submit"
+                          id="ButonInregistrare"
                           class="btn btn-primary btnAlignRConfirm"
                         >
                           Înregistrare
@@ -196,6 +201,10 @@
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../static/js/jsfrontend/testInregistrare.js"
     ></script>
   </body>
 </html>
